--- a/10_matplotlib_funcs.ipynb
+++ b/10_matplotlib_funcs.ipynb
@@ -9121,7 +9121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -9919,10 +9919,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x114d191d0>"
+       "<matplotlib.collections.PathCollection at 0x11572d390>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
